--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ footballData/footballData/__pycache__/settings.cpython-36.pyc
 footballData/footballData/__pycache__/pipelines.cpython-36.pyc
 footballData/footballData/__pycache__/items.cpython-36.pyc
 footballData/footballData/__pycache__/__init__.cpython-36.pyc
+DataScience/DataAnalysisFootball/data/database\.sqlite 
