crawler fix, FootballDataStats improved

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ footballData/footballData/__pycache__/pipelines.cpython-36.pyc
 footballData/footballData/__pycache__/items.cpython-36.pyc
 footballData/footballData/__pycache__/__init__.cpython-36.pyc
 DataScience/DataAnalysisFootball/data/database\.sqlite 
+DataScience/DataAnalysisFootball/__pycache__/helpers.cpython-36.pyc
+DataScience/.ipynb_checkpoints/FootballDataStats-checkpoint.ipynb
+DataScience/.ipynb_checkpoints/FootballDataStats-Copy1-checkpoint.ipynb
+DataScience/.ipynb_checkpoints/FootballDataOldBackup-Copy1-checkpoint.ipynb
+DataScience/.ipynb_checkpoints/FootballDataBackup-checkpoint.ipynb
+DataScience/.ipynb_checkpoints/FootballData-Backup-checkpoint.ipynb
